<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.trackerforce</groupId>
	<artifactId>trackerforce-services</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>Trackerforce Services</name>
	<url>https://github.com/trackerforce</url>
	
	<developers>
		<developer>
			<name>Roger Floriano</name>
			<email>trackerforce.project@gmail.com</email>
			<organization>Trackerforce</organization>
			<organizationUrl>https://www.linkedin.com/company/trackerforce</organizationUrl>
		</developer>
 	</developers>
 	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath />
	</parent>
	
	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<!-- Test-->
		<flapdoodle.embed.mongo.version>4.13.0</flapdoodle.embed.mongo.version>
		
		<!-- Sonar -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.language>java</sonar.language>
		<sonar.coverage.exclusions>
	      **/model/**/*.java,
	    </sonar.coverage.exclusions>
	</properties>
	
	<profiles>
		<profile>
			<id>default</id>
			<activation>
	            <activeByDefault>true</activeByDefault>
	         </activation>
			<modules>
				<module>trackerforce-common</module>
				<module>trackerforce-common-tenancy</module>
				<module>trackerforce-identity</module>
				<module>trackerforce-management</module>
				<module>trackerforce-session</module>
			</modules>
		</profile>
		<profile>
			<id>identity</id>
			<modules>
				<module>trackerforce-common</module>
				<module>trackerforce-identity</module>
			</modules>
		</profile>
		<profile>
			<id>management</id>
			<modules>
				<module>trackerforce-common</module>
				<module>trackerforce-common-tenancy</module>
				<module>trackerforce-management</module>
			</modules>
		</profile>
		<profile>
			<id>session</id>
			<modules>
				<module>trackerforce-common</module>
				<module>trackerforce-common-tenancy</module>
				<module>trackerforce-session</module>
			</modules>
		</profile>
	</profiles>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.12.1</version>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>3.10.0.2594</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.11</version>
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			    <executions>
			        <execution>
			            <id>prepare-and-report</id>
			            <goals>
			                <goal>prepare-agent</goal>
			                <goal>report</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>report-aggregate</id>
			            <phase>verify</phase>
			            <goals>
			                <goal>report-aggregate</goal>
			            </goals>
			            <configuration>
			                <outputDirectory>${project.basedir}/../target/site/jacoco-aggregate</outputDirectory>
			            </configuration>
			        </execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>